--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 }
 
 body {
-
     background: rgb(1, 142, 233);
 	background: radial-gradient(
 		circle,
@@ -18,6 +17,7 @@ body {
 	);
     width: 100%;
     height: 100vh;
+    font-size: 12px;
 }
 h1{
     text-align: center;
@@ -32,26 +32,31 @@ input[type="number"]{
 input[type="checkbox"]{
     cursor: pointer;
 }
+a {
+	text-decoration: none;
+	color: #000;
+}
 .container {
     width: 100%;
     max-width: 600px;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+    padding: 20px;
+    margin: 0 auto;
 	color: #ffffff;
     background-color: #010233;
-    padding: 100px;
+ 
 }
 .content{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 10px;
+    align-items: center;
+    gap: 20px;
     margin-top: 50px;
+    height: 70vh;
 }
 
 .btn{
+    width: 100%;
+    max-width: 200px;
     display: inline-block;
     margin: 0.5em 0;
     padding: 0.8em 2.2em;
@@ -63,10 +68,11 @@ input[type="checkbox"]{
     text-transform: uppercase;
     letter-spacing: 0.04em;
     transition: 0.3s;
-    width: 39%;
 }
 
 .password{
+    width: 100%;
+    max-width: 201px;
     margin: 0.5em 0;
     padding: 0.8em 2.2em;
     background-color: #019af4;
@@ -74,7 +80,26 @@ input[type="checkbox"]{
     color: #ffffff;
     letter-spacing: 0.04em;
     transition: 0.3s;
-    width: 73%;
-    height: 7vh;
     text-align: center;
+}
+
+.likedin,
+.github {
+	margin-bottom: 5px;
+}
+
+footer {
+	width: 100%;
+	text-align: center;
+	padding: 20px 0;
+}
+
+@media (min-width: 600px)
+{
+  body{
+    font-size: 16px;
+  }
+  .password{
+    max-width: 250px;
+  }
 }
